integ-tests/tests/snapshots/parser__datetimes__utc_punkt.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ utc_punkt:1:7
  │
1 │ utc = 2016-09-09T09:09:09.1Z
  │       ^^^^^^^^^^^^^ unable to parse number


